# clearnets

./: .gitignore  README.md  human_features.ipynb  pyproject.toml
clearnets/: compute_calculator.py  utils.py
clearnets/autointerp/: autointerp_explain.py  autointerp_load_saes.py  autointerp_plot.py  e2e_clearnet.py  load_and_hook.py  populate_feature_cache_sae.py  populate_feature_cache_sparse.py  populate_feature_cache_sparse_neox.py
clearnets/generalization/inference/: cifar_vision.py  grok.py  inference.py  mnist_vit.py  pythia.py
clearnets/generalization/pgdl/: complexity_measures.py  test_pgdl.py
clearnets/generalization/plot/: plot_all.py  plot_modular_addition_grok.py  plot_pythia.py
clearnets/generalization/train/: grok_mod_addition.py  lightning_wrapper.py  test.py  vision_cifar10.py  vit_overfit_mnist.py
clearnets/sparse_feedfwd_transformer/: autointerp_load_saes.py  autointerp_plot.py  populate_autointerp_cache_sae.py  populate_autointerp_cache_sparse.py  train_sae.py  train_sae_cli.py  train_tinystories_transformers.py
clearnets/train/: embedding_bag.py  grok_mod_addition.py  lightning_wrapper.py  sparse_gptneox.py  sparse_gptneox_config.py  test.py  tinystories_tokenizer.py  train_sae.py  train_sae_cli.py  train_sae_neox.py  train_tinystories_transformers.py  train_transformer.py  vision_cifar10.py  vit_overfit_mnist.py  xformer_embeddingbag.py  xformers.py
