[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clearnets"
description = "Experimental disentanglement interpretability"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
license = {text = "MIT License"}
dependencies = [
    "delphi @ git+https://github.com/EleutherAI/delphi",
    "sparsify @ git+https://github.com/EleutherAI/sparsify",
    "datasets",
    "torch",
    "plotly",
    "scipy",
    "transformers",
    "optimum",
    "pre-commit",
]
version = "0.0.1"

[tool.setuptools]
packages = ["clearnets"]

[tool.pyright]
include = ["clearnets*"]
reportPrivateImportUsage = false

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
ignore-init-module-imports = true